added images extensions for production

--- a/app/views/pages/partenaires.html.erb
+++ b/app/views/pages/partenaires.html.erb
@@ -60,7 +60,7 @@
           <div class="col-12 col-md-4 mb-3">
             <%= link_to "https://www.cebx.fr/", target: :blank do %>
               <div class="card">
-                <img class="card-img-top" src="<%= image_path("entreprises") %>">
+                <img class="card-img-top" src="<%= image_path("entreprises.png") %>">
                 <div class="card-body">
                   <p class="card-text text">
                     Le <strong> Club des Entreprises de Bordeaux </strong> et son atelier développement durable ont beaucoup apporté à la conception du projet, de par leur expérience sur le sujet. Le Club a également été un important partenaire de communication pour atteindre les entreprises de Bordeaux.
@@ -73,7 +73,7 @@
           <div class="col-12 col-md-4 mb-3">
             <%= link_to "http://www.bordeaux-metropole.fr/", target: :blank do %>
               <div class="card">
-                <img class="card-img-top" src="<%= image_path("metropole") %>">
+                <img class="card-img-top" src="<%= image_path("metropole.png") %>">
                 <div class="card-body">
                   <p class="card-text text">
                     Premier partenaire financier, <strong> Bordeaux Métropole </strong> nous soutient à travers l'appel à projet zéro déchet, en tant que Territoire Zéro Déchet Zéro Gaspillage.
@@ -86,7 +86,7 @@
           <div class="col-12 col-md-4 mb-3">
             <%= link_to "https://www.ademe.fr/", target: :blank do %>
               <div class="card">
-                <img class="card-img-top" src="<%= image_path("ademe") %>">
+                <img class="card-img-top" src="<%= image_path("ademe.png") %>">
                 <div class="card-body">
                   <p class="card-text text">
                     Important partenaire financier, l' <strong>ADEME</strong> soutient le Défi qui est complémentaire de ses propres outils.
