--- a/app/views/pages/soutenir.html.erb
+++ b/app/views/pages/soutenir.html.erb
@@ -15,7 +15,7 @@
         <div class="col-lg-6 pr-4 mt-4">
           <h2 class="mb-3 green-bg">Don</h2>
           <div class="d-flex flex-column justify-content-center align-items-center">
-            <%= image_tag "Don", width:200, height: 200 %>
+            <%= image_tag "Don.jpg", width:200, height: 200 %>
             <p class="text pt-2">
               Les particuliers peuvent également soutenir le projet, à travers le don. <b>Chaque contribution est importante</b>, quelque soit le montant.
             </p>
