--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -1,7 +1,7 @@
 <div id="carouselExampleSlidesOnly" class="carousel slide position-fixed" data-ride="carousel" data-interval="7000">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <%= image_tag "gestion", class:"d-block w-100", alt:"First slide" %>
+      <%= image_tag "gestion.jpg", class:"d-block w-100", alt:"First slide" %>
       <div class="carousel-caption">
         <%= link_to "/pourquoi", class:"btn btn-secondary text-white responsive-btn" do %>
         <h5>140kg de déchets par bureau</h5>
@@ -10,7 +10,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag "mecenat", class:"d-block w-100", alt:"Second slide" %>
+      <%= image_tag "mecenat.jpg", class:"d-block w-100", alt:"Second slide" %>
       <div class="carousel-caption">
         <div class="d-md-block">
           <%= link_to "/soutenir", class:"btn btn-secondary text-white responsive-btn" do %>
@@ -21,7 +21,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <%= image_tag "mobilisation", class:"d-block w-100", alt:"Third slide" %>
+      <%= image_tag "mobilisation.jpg", class:"d-block w-100", alt:"Third slide" %>
       <div class="carousel-caption d-md-block">
         <%= link_to "/comment", class:"btn btn-secondary text-white responsive-btn" do %>
         <h5>Relevez le Défi ! </h5>
