--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -6,7 +6,7 @@
       <div class="d-flex flex-column justify-content-center align-items-center mx-3 my-3 ekolo-margin">
         <div>Qui sommes nous ?</div>
         <div>
-          <%= image_tag "ekologeek", width: 100, id:"logo-footer" %>
+          <%= image_tag "ekologeek.png", width: 100, id:"logo-footer" %>
         </div>
       </div>
     <% end %>
