--- a/app/views/pages/comment.html.erb
+++ b/app/views/pages/comment.html.erb
@@ -42,7 +42,7 @@
     <div class="row">
       <div class="col-lg-6">
         <div class="d-flex flex-column justify-content-center align-items-center h-100">
-          <%= image_tag "carte", width: 400, class:"header-padding-comment-image comment-picture" %>
+          <%= image_tag "carte.png", width: 400, class:"header-padding-comment-image comment-picture" %>
         </div>
       </div>
       <div class="col-lg-6">
@@ -103,7 +103,7 @@
     <div >
       <h2 class="mb-2 mt-5 green-bg" >Planning</h2>
       <div class="d-flex justify-content-center align-items-center my-5">
-        <%= image_tag "Frise", style:"width: 100%", class:"px-lg-5" %>
+        <%= image_tag "Frise.png", style:"width: 100%", class:"px-lg-5" %>
       </div>
     </div>
     <div>
