add plan su site page with links

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -13,7 +13,7 @@
 
     <div class="footer-content flex-grow-1 text-center">
       <div class=" d-flex justify-content-center">
-        <%= link_to "Plan du site", root_path, class:"mr-2" %>
+        <%= link_to "Plan du site", plan_path, class:"mr-2" %>
         -
         <%= link_to "Politique de confidentialité", root_path,class:"ml-2" %>
       </div>
