--- a/app/views/pages/pourquoi.html.erb
+++ b/app/views/pages/pourquoi.html.erb
@@ -1,7 +1,7 @@
 <div class="wrapper h-100">
   <div class="container">
     <div id="pourquoi1"></div>
-    <h1 class="header text-primary mt-5 text-center pt-5">Pourquoi</h1>
+    <h1 class="header text-primary text-center pt-5 mt-5 mb-0">Pourquoi</h1>
     <div class="title header-padding-pourquoi" >
       <h2 class="green-bg"> Pourquoi réduire ses déchets en entreprise ? </h2>
     </div>
@@ -178,7 +178,7 @@
     </div>
 
     <div class="container-pourquoi-2">
-      <div class="title my-5" >
+      <div class="title mt-5 mb-4" >
         <h2 class="green-bg"> Pourquoi ma structure s'engagerait dans ce défi ?</h2>
       </div>
 
@@ -301,7 +301,7 @@
           <figure class="card card-flip">
             <div class="card card-size-small">
               <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("comportemental.jpg")%>)">
-                <h3 class="card-title">Une démarche comportementale</h3>
+                <h3 class="card-title px-4">Une démarche comportementale</h3>
               </div>
             </div>
 
