--- a/app/stylesheets/components/_flip-card.scss
+++ b/app/stylesheets/components/_flip-card.scss
@@ -47,6 +47,7 @@
         // background-color: $secondary;
         color: white;
         text-align: center;
+        text-shadow: 1px 1px 2px black;
       }
    }
 
