--- a/app/stylesheets/components/_footer.scss
+++ b/app/stylesheets/components/_footer.scss
@@ -15,7 +15,8 @@
     color: white;
   }
   a:hover {
-    color: $secondary;
+    color: #00576b;
+    text-decoration: none;
   }
 
   @media (max-width: $desktop) {
