fix fucking navbar

--- a/app/stylesheets/components/_carousel.scss
+++ b/app/stylesheets/components/_carousel.scss
@@ -11,9 +11,13 @@
         background-position: center;
       }
     }
-    @media (max-height: $tablet) {
+    @media (max-height: $mobile) {
         height: 100%;
     }
+    @media (max-height: $mobile) {
+        height: 50%;
+    }
+
   }
 }
   .text-slide {
