--- a/app/views/shared/_navbar_primary.html.erb
+++ b/app/views/shared/_navbar_primary.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg justify-content-end position-fixed" id="nav_bar">
   <div class="navbar-logo align-items-center justify-content-center" id="nav_logo">
     <%= link_to root_path, class:"navbar-brand" do %>
-      <%= inline_svg "logo.svg", width:50, id:"logo" %>
+        <%= image_tag 'logo.jpg', id:"logo" %>
     <% end %>
   </div>
   <button class="navbar-toggler justify-content-end ml-2" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,12 +9,12 @@
   </button>
   <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
     <ul class="navbar-nav mr-5">
-      <li class="nav-item m-2">
+      <li class="nav-item">
         <%= link_to root_path, class:"navbar-brand home-nav-link" do %>
-          <%= inline_svg "Accueil.svg", width: 30 %>
+          <%= inline_svg "Accueil.svg", width: 20, class:"home" %>
         <% end %>
       </li>
-      <li class="nav-item m-2 dropdown">
+      <li class="nav-item m-2 dropdown bold-link">
         <a class="nav-link dropdown-toggle" href="/pourquoi" id="navbarDropdownMenuLink" role="button" aria-haspopup="true" aria-expanded="false">
           POURQUOI
         </a>
@@ -23,7 +23,7 @@
           <%= link_to "Pourquoi mon entreprise ?", pourquoi_path(anchor: "pourquoi2"), class:"dropdown-item text-primary"%>
         </div>
       </li>
-      <li class="nav-item m-2 dropdown">
+      <li class="nav-item m-2 dropdown bold-link">
         <a class="nav-link dropdown-toggle" href="/comment" id="navbarDropdownMenuLink" role="button" aria-haspopup="true" aria-expanded="false">
           COMMENT
         </a>
@@ -36,10 +36,10 @@
           <%= link_to "Combien ça coûte ?", comment_path(anchor: "comment6"), class:"dropdown-item text-primary" %>
         </div>
       </li>
-      <li class="nav-item m-2">
+      <li class="nav-item m-2 bold-link">
         <%= link_to "S'INSCRIRE", "/inscription", class:"nav-link text-light-gray" %>
       </li>
-      <li class="nav-item m-2 dropdown">
+      <li class="nav-item m-2 dropdown bold-link">
         <a class="nav-link dropdown-toggle" href="/soutenir" id="navbarDropdownMenuLink" role="button" aria-haspopup="true" aria-expanded="false">
           SOUTENIR
         </a>
