--- a/app/views/shared/_navbar_secondary.html.erb
+++ b/app/views/shared/_navbar_secondary.html.erb
@@ -1,3 +1,7 @@
-<div class="navbar-secondary d-flex justify-content-center align-items-center">
-  <%= inline_svg 'logo.svg', width:200, class:"logo-nav-secondary" %>
-</div>
+<span >
+  <%= link_to  "Contact", contact_path, id:"contact-link", class:"btn btn-secondary"%>
+</span>
+
+<span class="navbar-secondary" id="logo-navbar-secondary">
+  <%= image_tag 'logo.jpg', class:"logo-nav-secondary" %>
+</span>
