--- a/app/views/pages/comment.html.erb
+++ b/app/views/pages/comment.html.erb
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <div class="container mt-5 mb-5">
+  <div class="container bg-white my-5">
     <div id="comment1"></div>
     <h1 class="header text-primary mb-5 text-center pt-5">Comment</h1>
     <div class="header-padding-comment" >
@@ -110,11 +110,11 @@
       <h2 class="mb-2 mt-5 green-bg" >Combien ça coûte ?</h2>
       <p>La participation au Défi comprend un <b>prix forfaitaire</b> de 150€, <b>plus</b> un tarif qui dépend de la taille de votre établissement : 10€ par salarié.e.</p>
       <h5 class="my-4 ml-3">Exemples :</h5>
-      <ul class="list mb-5 bullet-custom  bullet-secondary">
+      <ul class="list bullet-custom  bullet-secondary no-margin">
         <li class="my-2 ml-lg-4">
           mon organisation comprend 10 employés, la participation au Défi sera de 150+10x10 = 250€
         </li>
-        <li class="my-2 ml-lg-4 mb-5 padding">
+        <li class="mt-2 ml-lg-4 padding">
           mon organisation comprend 100 employés, la participation au Défi sera de 150+10x100 = 1150€
         </li>
       </ul>
