presque toutes les modifs

--- a/app/views/pages/inscription.html.erb
+++ b/app/views/pages/inscription.html.erb
@@ -1,17 +1,18 @@
 
 <div class="wrapper">
   <div class="container">
-    <div class="container-inscription">
-      <h1 class="header text-primary my-5 text-center pt-5">S'inscrire</h1>
+    <div class="container-inscription bg-white px-5 my-5">
+      <h1 class="header text-primary text-center pt-5 mt-5">S'inscrire</h1>
+      <h2 class="mt-5 mb-4 green-bg">Bordeaux Métropole</h2>
       <div class="row">
         <div class="col-lg-6 text d-flex flex-column justify-content-center">
           <p> Votre structure est située dans Bordeaux Métropole ? Vous pourrez <b>vous inscrire début décembre</b>.</p>
           <p>D'ici là vous pouvez <b>agir de votre côté</b> ! Voici des exemples de gestes que vous pouvez mettre en place :</p>
           <ul class="list bullet-custom">
-            <li class="my-2 ml-lg-4">
+            <li class="my-2">
               Le <%= link_to "guide", "https://www.zerowastefrance.org/wp-content/uploads/2018/07/zd-au-bureau-zwf.pdf", target:"_blank" %>, du zéro déchet au bureau, créé par Zero Waste
             </li>
-            <li class="my-2 ml-lg-4">
+            <li class="my-2">
               Le <%= link_to "guide", "https://www.ademe.fr/sites/default/files/assets/documents/guide-pratique-ecoresponsable-au-bureau.pdf", target:"_blank" %> pour être éco-responsable au bureau, créé par l'ADEME
             </li>
           </ul>
@@ -22,12 +23,12 @@
           </div>
         </div>
       </div>
+      <h2 class="mt-5 mb-4 green-bg">Hors Bordeaux Métropole</h2>
+      <p class="text mb-0">Votre structure n'est pas située sur Bordeaux Métropole ? <b>Vous pouvez organiser un défi sur votre territoire</b> ! Ekolo[geek] vous accompagne et vous fournit les outils pour que vous le fassiez vous-même!</p>
 
-      <p class="text">Votre structure n'est pas située sur Bordeaux Métropole ? <b>Vous pouvez organiser un défi sur votre territoire</b> ! Ekolo[geek] vous accompagne et vous fournit les outils pour que vous le fassiez vous-même!</p>
-
-      <p>
-        <a class="btn btn-secondary text-white" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-          Contactez nous !
+      <p class="d-flex justify-content-center mt-4 pb-5">
+        <a class="btn btn-primary text-white" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+          <b>Contactez-nous !</b>
         </a>
       </p>
       <div class="collapse" id="collapseExample">
