--- a/app/views/pages/partenaires.html.erb
+++ b/app/views/pages/partenaires.html.erb
@@ -1,8 +1,8 @@
 <div class="wrapper">
-  <div class="container mt-5">
-    <div class="container-ekologeek pt-4">
-      <h2 class="header text-primary">Ekolo[geek]</h2>
-      <h4 class="mb-4">Le Défi Zéro Déchet pour les Professionnels est porté par l'association Ekolo[geek]</h4>
+  <div class="container">
+    <div class="container-ekologeek bg-white px-5 my-5">
+      <h2 class="header text-primary text-center pt-5 mt-5">Ekolo[geek]</h2>
+      <h4 class="mb-4 text-center">Le Défi Zéro Déchet pour les Professionnels est porté par l'association Ekolo[geek]</h4>
 
       <div class="row">
         <div class="col-lg-6">
@@ -50,11 +50,11 @@
         </p>
       </div>
 
-      <div class="partenaires mt-5">
-        <h2 class="header text-primary">Les partenaires</h2>
-        <p class="text">
+      <div class="partenaires">
+        <h2 class="header text-primary text-center mt-5">Les partenaires</h2>
+        <h4 class="mb-4 text-center">
           Ce projet ne pourrait être mis en œuvre sans le soutien de nos partenaires :
-        </p>
+        </h4>
 
         <div class="row">
           <div class="col-12 col-md-4 mb-3">
@@ -97,7 +97,7 @@
           </div>
         </div>
         <div class="call-action">
-          <%= link_to "Vous aussi, soutenez le projet !", '/soutenir', class:"btn btn-secondary" %>
+          <%= link_to "Vous aussi, soutenez le projet !", '/soutenir', class:"btn btn-primary" %>
         </div>
       </div>
     </div>
