--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,37 +1,37 @@
 <div class="wrapper">
-  <div class="container">
+  <div class="container bg-white px-5 my-5">
     <p class="my-5">un truc visuel avec quelques arguments clés cliquables (lien vers l'ancrage dans la page concernée)</p>
     <h2>Objectif: réduire vos déchets de fonctionnement de 10%</h2>
     <h5 class="my-4 ml-3">Comment :</h5>
     <ul class="list mb-5 bullet-custom">
-      <li class="my-2 ml-lg-4">
+      <li class="my-2">
         Un suivi de vos données
       </li>
-      <li class="my-2 ml-lg-4">
+      <li class="my-2">
         Des rencontres collectives
       </li>
-      <li class="my-2 ml-lg-4">
+      <li class="my-2">
         Un suivi individuel
       </li>
     </ul>
     <h5 class="my-4 ml-3">Pourquoi :</h5>
-    <ul class="list mb-5 bullet-custom bullet-secondary">
-      <li class="my-2 ml-lg-4">
+    <ul class="list mb-5 bullet-custom bullet-primary">
+      <li class="my-2">
         cohésion, projet d'équipe
       </li>
-      <li class="my-2 ml-lg-4">
+      <li class="my-2">
         ex: mobiliser son équipe autour d’un projet commun, qui contribuera au mieux-vivre dans les locaux.
       </li>
-      <li class="my-2 ml-lg-4">
+      <li class="my-2">
         économies, actions faciles, peu d'investissements
       </li>
-      <li class="my-2 ml-lg-4">
+      <li class="my-2">
         ex: peu d'investissements et sont rapides à mettre en place. Une meilleure gestion, alliée à une démarche de réduction, permet de diminuer le coût global des déchets.
       </li>
-      <li class="my-2 ml-lg-4">
+      <li class="my-2">
         image externe: engagement DD RSE
       </li>
-      <li class="my-2 ml-lg-4">
+      <li class="my-2">
         ex: Mettre en valeur votre engagement environnemental et vos actions dans une démarche zéro déchet vous donne un réel avantage concurrentiel.
       </li>
     </ul>
