--- a/app/views/shared/_carousel.html.erb
+++ b/app/views/shared/_carousel.html.erb
@@ -3,7 +3,7 @@
     <div class="carousel-item active">
       <%= image_tag "gestion.jpg", class:"d-block w-100", alt:"First slide" %>
       <div class="carousel-caption">
-        <%= link_to "/pourquoi", class:"btn btn-secondary text-white responsive-btn" do %>
+        <%= link_to "/pourquoi", class:"btn btn-secondary text-white responsive-btn box" do %>
         <h5>140kg de déchets par bureau</h5>
         <p class="mb-0">C'est trop pour vous ?</p>
         <% end %>
@@ -13,7 +13,7 @@
       <%= image_tag "mecenat.jpg", class:"d-block w-100", alt:"Second slide" %>
       <div class="carousel-caption">
         <div class="d-md-block">
-          <%= link_to "/soutenir", class:"btn btn-secondary text-white responsive-btn" do %>
+          <%= link_to "/soutenir", class:"btn btn-secondary text-white responsive-btn box" do %>
           <h5>Le Défi a besoin de vous !</h5>
           <p class="mb-0">Soutenez le projet</p>
           <% end %>
@@ -23,7 +23,7 @@
     <div class="carousel-item">
       <%= image_tag "mobilisation.jpg", class:"d-block w-100", alt:"Third slide" %>
       <div class="carousel-caption d-md-block">
-        <%= link_to "/comment", class:"btn btn-secondary text-white responsive-btn" do %>
+        <%= link_to "/comment", class:"btn btn-secondary text-white responsive-btn box" do %>
         <h5>Relevez le Défi ! </h5>
         <p class="mb-0">Réduisez vos déchets de 10%</p>
         <% end %>
