--- a/app/views/pages/pourquoi.html.erb
+++ b/app/views/pages/pourquoi.html.erb
@@ -177,167 +177,147 @@
       </div>
     </div>
 
-    <div class="container-pourquoi-2">
-      <div class="title mt-5 mb-4" >
-        <h2 class="green-bg"> Pourquoi ma structure s'engagerait dans ce défi ?</h2>
-      </div>
-
-      <div class="row padding">
-        <div class="col-12  col-md-6">
-          <figure class="card card-flip">
-            <div class="card card-size-small">
-              <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("valeur.jpg")%>)">
-                <h3 class="card-title">Etre mis en valeur</h3>
-              </div>
-            </div>
-
-            <div class="card card-size-small">
-              <div class="card-body">
-                <h3 class="card-title">Etre mis en valeur</h3>
-                <div class="card-text text">
-                  Une <strong>communication externe</strong> sera mise en œuvre tout au long du défi, et notamment lors de l'événement de clôture, <strong>pour valoriser les participants</strong> et leurs <strong>accomplissements</strong>.
-                </div>
-              </div>
-            </div>
-          </figure>
-        </div>
-
-        <div class="col-12  col-md-6">
-          <figure class="card card-flip">
-            <div class="card card-size-small">
-              <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("inclure.jpg")%>)">
-                <h3 class="card-title">Inclure vos équipes</h3>
-              </div>
-            </div>
-
-            <div class="card card-size-small">
-              <div class="card-body">
-                <h3 class="card-title">Inclure vos équipes</h3>
-                <div class="card-text text">
-                  Le Défi a pour objectif d'impliquer tous les salariés de la structure, de générer une réelle <strong>collaboration</strong>. Ainsi participer au projet permet, au sein de chaque structure, d'<strong>agir ensemble</strong>, de <strong>fédérer</strong> et <strong>mobiliser</strong> une équipe autour d'un <strong>projet commun</strong>.
-                </div>
-              </div>
-            </div>
-          </figure>
-        </div>
-
-        <div class="col-12  col-md-6">
-          <figure class="card card-flip">
-            <div class="card card-size-small">
-              <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("collectif.jpg")%>)">
-                <h3 class="card-title">Une approche collective</h3>
-              </div>
-            </div>
-
-            <div class="card card-size-small">
-              <div class="card-body">
-                <h3 class="card-title">Une approche collective</h3>
-                <div class="card-text text">
-                  L'intérêt du défi est de <strong>mettre en commun</strong> les doutes, les difficultés, les idées, les bonnes pratiques. Les déchets de fonctionnement concernent toutes les structures, ce qui permet de se <strong>nourrir des expériences des autres</strong>.
-                </div>
-              </div>
-            </div>
-          </figure>
-        </div>
-
-        <div class="col-12  col-md-6">
-          <figure class="card card-flip">
-            <div class="card card-size-small">
-              <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("accompagnement.jpg")%>)">
-                <h3 class="card-title">Un accompagnement professionnel</h3>
-              </div>
-            </div>
-
-            <div class="card card-size-small">
-              <div class="card-body">
-                <h3 class="card-title">Un accompagnement professionnel</h3>
-                <div class="card-text text">
-                  Tout au long du défi, un <strong>suivi</strong> des déchets et des comportement est effectué en interne. Des <strong>rencontres collectives régulières</strong>, ainsi qu'un <strong>accompagnement personnalisé</strong> permettent à chaque structure de fertiliser le terreau emmenant à l'<strong>action collective et durable</strong>.
-                </div>
-              </div>
-            </div>
-          </figure>
-        </div>
-
-        <div class="col-12  col-md-6">
-          <figure class="card card-flip">
-            <div class="card card-size-small">
-              <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("dechet.jpg")%>)">
-                <h3 class="card-title">Agir sur vos déchets de fonctionnement</h3>
-              </div>
-            </div>
-
-            <div class="card card-size-small">
-              <div class="card-body">
-                <h3 class="card-title">Agir sur vos déchets de fonctionnement</h3>
-                <div class="card-text text">
-                  <strong>Toute personne, toute entreprise est concernée par les déchets de fonctionnement</strong> (papier, stylos, ordinateurs, gobelets de café, emballages etc).  Les changements à ce niveau demandent en général <strong>peu d'investissements</strong> et sont <strong>rapides à mettre en place</strong>.
-                </div>
-              </div>
-            </div>
-          </figure>
-        </div>
-
-        <div class="col-12  col-md-6">
-          <figure class="card card-flip">
-            <div class="card card-size-small">
-              <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("complementaire.jpg")%>)">
-                <h3 class="card-title">Une complémentarité</h3>
-              </div>
-            </div>
-
-            <div class="card card-size-small">
-              <div class="card-body">
-                <h3 class="card-title">Une complémentarité</h3>
-                <div class="card-text text">
-                  Le Défi  est <strong>complémentaire</strong> à d'autres outils et démarches existants : RSE, ISO 14001 ISO 26000, bilan carbone, Agenda 21, éco-structure (école, commerçants), labels spécifiques, Gagnants sur tous les coûts etc. Avec lui vous pourrez ainsi initier ou compléter votre  <strong>démarche d'éco-responsabilité</strong>.
-                </div>
-              </div>
-            </div>
-          </figure>
-        </div>
-
-        <div class="col-12  col-md-6">
-          <figure class="card card-flip">
-            <div class="card card-size-small">
-              <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("comportemental.jpg")%>)">
-                <h3 class="card-title px-4">Une démarche comportementale</h3>
-              </div>
-            </div>
-
-            <div class="card card-size-small">
-              <div class="card-body">
-                <h3 class="card-title">Une démarche comportementale</h3>
-                <div class="card-text text">
-                  L'idée est de vous accompagner  pour que vous <strong>fassiez par  vous-mêmes : faire émerger vos idées</strong>, vous <strong>aider</strong> dans les choix et la mise en place de solutions. Le but est de <strong>changer les comportements dans la durée</strong>, de provoquer <strong>l'engagement et l'action</strong>.
-                </div>
-              </div>
-            </div>
-          </figure>
-        </div>
-
-        <div class="col-12  col-md-6">
-          <figure class="card card-flip">
-            <div class="card card-size-small">
-              <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("win.jpg")%>)">
-                <h3 class="card-title">Pour gagner !</h3>
-              </div>
-            </div>
-
-            <div class="card card-size-small">
-              <div class="card-body">
-                <h3 class="card-title">Pour gagner !</h3>
-                <div class="card-text text">
-                  <p class="mb-1">Le défi apporte également une émulation collective car la <strong>compétition</strong> favorise l'envie de <strong>s'améliorer</strong> et de finir gagnant.</p>
-                  <p>La cerise sur la gâteau, en plus de tous les autres avantages du Défi, c'est de gagner ! <strong>La plus belle évolution</strong> (technique et comportementale) donnera un <strong>vainqueur</strong>, qui sera mis en avant dans toute la communication externe.</p>
-                </div>
-              </div>
-            </div>
-          </figure>
-        </div>
-      </div>
-
+    <div class="title mt-5 mb-4" >
+      <h2 class="green-bg"> Pourquoi ma structure s'engagerait dans ce défi ?</h2>
     </div>
+
+    <div class="row padding">
+      <div class="col-12  col-md-6 col-lg-4">
+        <figure class="card card-flip">
+          <div class="card card-size-small">
+            <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("valeur.jpg")%>)">
+              <h3 class="card-title">Etre mis en valeur</h3>
+            </div>
+          </div>
+
+          <div class="card card-size-small">
+            <div class="card-body">
+              <h3 class="card-title">Etre mis en valeur</h3>
+              <div class="card-text text">
+                Une <strong>communication externe</strong> sera mise en œuvre tout au long du défi, et notamment lors de l'événement de clôture, <strong>pour valoriser les participants</strong> et leurs <strong>accomplissements</strong>.
+              </div>
+            </div>
+          </div>
+        </figure>
+      </div>
+
+      <div class="col-12  col-md-6 col-lg-4">
+        <figure class="card card-flip">
+          <div class="card card-size-small">
+            <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("inclure.jpg")%>)">
+              <h3 class="card-title">Inclure vos équipes</h3>
+            </div>
+          </div>
+
+          <div class="card card-size-small">
+            <div class="card-body">
+              <h3 class="card-title">Inclure vos équipes</h3>
+              <div class="card-text text">
+                Le Défi a pour objectif d'impliquer tous les salariés de la structure, de générer une réelle <strong>collaboration</strong>. Ainsi participer au projet permet, au sein de chaque structure, d'<strong>agir ensemble</strong>, de <strong>fédérer</strong> et <strong>mobiliser</strong> une équipe autour d'un <strong>projet commun</strong>.
+              </div>
+            </div>
+          </div>
+        </figure>
+      </div>
+
+      <div class="col-12  col-md-6 col-lg-4">
+        <figure class="card card-flip">
+          <div class="card card-size-small">
+            <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("dechet.jpg")%>)">
+              <h3 class="card-title">Agir sur vos déchets de fonctionnement</h3>
+            </div>
+          </div>
+
+          <div class="card card-size-small">
+            <div class="card-body">
+              <h3 class="card-title">Agir sur vos déchets de fonctionnement</h3>
+              <div class="card-text text">
+                <strong>Toute personne, toute entreprise est concernée par les déchets de fonctionnement</strong> (papier, stylos, ordinateurs, gobelets de café, emballages etc).  Les changements à ce niveau demandent en général <strong>peu d'investissements</strong> et sont <strong>rapides à mettre en place</strong>.
+              </div>
+            </div>
+          </div>
+        </figure>
+      </div>
+
+      <div class="col-12  col-md-6 col-lg-4">
+        <figure class="card card-flip">
+          <div class="card card-size-small">
+            <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("collectif.jpg")%>)">
+              <h3 class="card-title">Une approche collective</h3>
+            </div>
+          </div>
+
+          <div class="card card-size-small">
+            <div class="card-body">
+              <h3 class="card-title">Une approche collective</h3>
+              <div class="card-text text">
+                L'intérêt du défi est de <strong>mettre en commun</strong> les doutes, les difficultés, les idées, les bonnes pratiques. Les déchets de fonctionnement concernent toutes les structures, ce qui permet de se <strong>nourrir des expériences des autres</strong>.
+              </div>
+            </div>
+          </div>
+        </figure>
+      </div>
+
+      <div class="col-12  col-md-6 col-lg-4">
+        <figure class="card card-flip">
+          <div class="card card-size-small">
+            <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("comportemental.jpg")%>)">
+              <h3 class="card-title px-4">Une démarche comportementale</h3>
+            </div>
+          </div>
+
+          <div class="card card-size-small">
+            <div class="card-body">
+              <h3 class="card-title">Une démarche comportementale</h3>
+              <div class="card-text text">
+                L'idée est de vous accompagner  pour que vous <strong>fassiez par  vous-mêmes : faire émerger vos idées</strong>, vous <strong>aider</strong> dans les choix et la mise en place de solutions. Le but est de <strong>changer les comportements dans la durée</strong>, de provoquer <strong>l'engagement et l'action</strong>.
+              </div>
+            </div>
+          </div>
+        </figure>
+      </div>
+
+      <div class="col-12  col-md-6 col-lg-4">
+        <figure class="card card-flip">
+          <div class="card card-size-small">
+            <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("accompagnement.jpg")%>)">
+              <h3 class="card-title">Un accompagnement professionnel</h3>
+            </div>
+          </div>
+
+          <div class="card card-size-small">
+            <div class="card-body">
+              <h3 class="card-title">Un accompagnement professionnel</h3>
+              <div class="card-text text">
+                Tout au long du défi, un <strong>suivi</strong> des déchets et des comportement est effectué en interne. Des <strong>rencontres collectives régulières</strong>, ainsi qu'un <strong>accompagnement personnalisé</strong> permettent à chaque structure de fertiliser le terreau emmenant à l'<strong>action collective et durable</strong>.
+              </div>
+            </div>
+          </div>
+        </figure>
+      </div>
+
+      <div class="col-12  col-md-6 col-lg-4 offset-lg-4">
+        <figure class="card card-flip">
+          <div class="card card-size-small">
+            <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("win.jpg")%>)">
+              <h3 class="card-title">Pour gagner !</h3>
+            </div>
+          </div>
+
+          <div class="card card-size-small">
+            <div class="card-body">
+              <h3 class="card-title">Pour gagner !</h3>
+              <div class="card-text text">
+                <p class="mb-1">Le défi apporte également une émulation collective car la <strong>compétition</strong> favorise l'envie de <strong>s'améliorer</strong> et de finir gagnant.</p>
+                <p>La cerise sur la gâteau, en plus de tous les autres avantages du Défi, c'est de gagner ! <strong>La plus belle évolution</strong> (technique et comportementale) donnera un <strong>vainqueur</strong>, qui sera mis en avant dans toute la communication externe.</p>
+              </div>
+            </div>
+          </div>
+        </figure>
+      </div>
+    </div>
+
+
   </div>
   <%= render 'shared/footer' %>
 </div>
