--- a/app/views/pages/comment.html.erb
+++ b/app/views/pages/comment.html.erb
@@ -122,6 +122,17 @@
       <div class="d-flex justify-content-center align-items-center mb-5">
         <%= image_tag "Frise.png", style:"width: 100%", class:"px-lg-5" %>
       </div>
+      <ul class="list mb-2 bullet-custom">
+        <li class="my-2">
+          <b>Inscription</b> : décembre-janvier, pour s'engager dans le Défi
+        </li>
+        <li class="my-2">
+          <b>Défi</b> : de janvier à juin, collecte de données, suivi personnalisé et rencontres collectives pour voir réduire vos déchets
+        </li>
+        <li class="my-2">
+          <b>Clôture</b> : en juin/juillet, importante communication externe et un événement de clôture, mettant en valeur les participants et le gagnant
+        </li>
+      </ul>
     </div>
     <div>
       <h2 class="mb-4 mt-5 green-bg" >Combien ça coûte ?</h2>
