--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -26,13 +26,13 @@
 
     <div class="my-4 social-links">
       <div class="d-flex justify-content-around">
-        <%= link_to ENV["INSTAGRAM_EKOLOGEEK"], class:"footer-link mx-3", target:"_blank" do %>
+        <%= link_to "https://www.instagram.com/ekologeek/", class:"footer-link mx-3", target:"_blank" do %>
           <%= inline_svg "instagram.svg", width:"30" %>
         <% end %>
-        <%= link_to ENV["FACEBOOK_EKOLOGEEK"],class:"footer-link mx-3", target:"_blank" do %>
+        <%= link_to "https://www.facebook.com/ekologeek/",class:"footer-link mx-3", target:"_blank" do %>
           <%= inline_svg "facebook.svg", width:"30" %>
         <% end %>
-        <%= link_to ENV["YOUTUBE_EKOLOGEEK"],class:"footer-link mx-3", target:"_blank" do %>
+        <%= link_to "https://www.youtube.com/user/ekologeek/",class:"footer-link mx-3", target:"_blank" do %>
           <%= inline_svg "youtube.svg", width:"30" %>
         <% end %>
       </div>
