--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -2,7 +2,8 @@
   <div class="container">
     <div class="container-soutenir">
       <h1 class="header text-primary mt-5 pt-5 text-center">Contact</h1>
-      <%= render "contact-form-with-description"  %>
+      <p class="text-center">Vous souhaitez nous poser une question, ou simplement être tenu au courant de l'évolution du défi ? C'est ici !</p>
+      <%= render "contact-form"  %>
     </div>
   </div>
   <%= render 'shared/footer' %>
